--- a/start.css
+++ b/start.css
@@ -41,7 +41,6 @@ html, body {
 
 #myCanvas {
     transition: margin 0.5s ease;
-
 }
 
 #sidebar.toggled {
@@ -111,4 +110,8 @@ html, body {
     flex-direction: column;
     padding: 0px;
     gap: 10px;
+}
+
+.popover-body{
+    padding: 0px !important;
 }
