--- a/start.css
+++ b/start.css
@@ -7,48 +7,37 @@ html, body {
     height: 100%;
 }
 
-#container {
-    /* display: flex;
-    flex-direction: column; */
-    height: 100%;
-}
-
 #toolbar {
-    height: 3.5rem;
-    background-color: beige;
+    height: 2.5rem;
+    background-color: #2f2f2fdd;
     display: flex;
     align-items: center;
     padding: 0.5rem;
     gap: 0.5rem;
+    position: absolute;
+    top:10px;
+    left: 10px;
+    right: 10px;
+    padding-left: 20px;
+    z-index: 99;
 }
 
 #CanvasContainer {
     overflow: hidden;
-    height: calc(100vh - 3.5rem);
+    height: 100%;
 }
 
 #sidebar {
-    height: 100%;
-    position: fixed;
-    width: 0px;
-    overflow-x: hidden;
-    transition: width 0.5s ease;
-    
-    flex-direction: column;
-    padding: 0px;
-    gap: 10px;
-}
-
-#myCanvas {
-    transition: margin 0.5s ease;
-}
-
-#sidebar.toggled {
-    width: 130px;
-}
-
-#myCanvas.toggled {
-    margin-left: 130px;
+    background-color: #00000000;
+    top: 3.5rem;
+    border-radius: 4px;
+    margin: 2rem;
+    width: 8rem;
+    left: auto;
+    bottom: 1rem;
+    max-height: 36rem;
+    height: auto;
+    z-index: 0;
 }
 
 .focus, .btn:focus {
