--- a/start.css
+++ b/start.css
@@ -145,6 +145,19 @@ html, body {
     float: left;
 }
 
+#drawingPanel{
+    border: none!important;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    width: 600px;
+    height: 50px;
+    padding-left: 40px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: lightgray;
+}
+
 /* .dropdown-item::before{
     content: ' ';
   background: url(check.svg);
