--- a/start.css
+++ b/start.css
@@ -20,7 +20,7 @@ html, body {
     padding: 0.5rem;
     gap: 0.5rem;
     position: absolute;
-    top:10px;
+    top: 10px;
     left: 10px;
     right: 10px;
     padding-left: 20px;
@@ -31,7 +31,7 @@ html, body {
     font-size: x-large !important;
 }
 
-.btn-toolbar{
+.btn-toolbar {
     column-gap: 20px;
 }
 
@@ -41,16 +41,15 @@ html, body {
 }
 
 #sidebar {
-    background-color: #00000000;
-    top: 3.5rem;
+    background-color: #505050!important;
     border-radius: 4px;
-    margin: 2rem;
-    width: 8rem;
-    left: auto;
-    bottom: 1rem;
-    max-height: 36rem;
-    height: auto;
+    margin: 4rem 1rem 1rem 0rem;
+    width: 14rem;
     z-index: 0;
+}
+
+.accordion div{
+    background-color: transparent !important;
 }
 
 .focus, .btn:focus {
@@ -86,25 +85,34 @@ html, body {
     box-shadow: none !important;
 }
 
-#newItemMenu {
-    width: 130px;
+
+.accordion-button:not(.collapsed) {
+    color: #2e2e2e !important;
+    background-color: #fdc108 !important;
 }
 
-.newItem {
-    width: 75px;
-    height: 75px;
+.accordion-button {
+    background-color: #6c757d !important;
+    color: #eee !important;
+}
+.newSignalItem{
+    color: #eee;
+    font-size:smaller;
+}
+.newItem_image {    
+    width: 45px;
+    height: 45px;
     background-repeat: no-repeat;
     background-position: left top;
     background-size: 30px;
     background-origin: content-box;
-    padding-left: 13px;
     background-color: #6c757d;
     border-radius: 4px;
     border-width: 0px;
 }
 
-.newItem:hover {
-    background-color: #5d646b;
+.newSignalItem:hover {
+    background-color: #9ca1a6;
 }
 
 .accordion-body {
@@ -114,11 +122,11 @@ html, body {
     gap: 10px;
 }
 
-.popover{
+.popover {
     max-width: 40rem !important;
 }
 
-.popover-body{
+.popover-body {
     padding: 0px !important;
 }
 
@@ -126,15 +134,15 @@ html, body {
     padding-left: 40px !important;
 }
 
-.dropdown-item.active {    
-    background-color:transparent !important;
-    color:black !important;
+.dropdown-item.active {
+    background-color: transparent !important;
+    color: black !important;
     position: relative;
     left: -30px;
     font-weight: bold;
 }
 
-.dropdown-item.active::before{
+.dropdown-item.active::before {
     content: "";
     background: url(check.svg);
     background-size: 25px 25px;
@@ -145,8 +153,7 @@ html, body {
     float: left;
 }
 
-#drawingPanel{
-    border: none!important;
+#drawingPanel {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
@@ -155,7 +162,7 @@ html, body {
     padding-left: 40px;
     padding-top: 5px;
     padding-bottom: 5px;
-    background-color: lightgray;
+    background-color: white;
 }
 
 /* .dropdown-item::before{
