--- a/www/start.css
+++ b/www/start.css
@@ -110,9 +110,7 @@ html, body {
     width: 45px;
     height: 45px;
     background-repeat: no-repeat;
-    background-position: left top;
-    background-size: 30px;
-    background-origin: content-box;
+    background-position: top center;
     background-color: #6c757d;
     border-radius: 4px;
     border-width: 0px;
