--- a/www/start.css
+++ b/www/start.css
@@ -13,8 +13,8 @@ html, body {
 }
 
 #toolbar {
-    height: 2.5rem;
-    background-color: #2f2f2fdd;
+    height: 3rem;
+    background-color: #2f2f2f;
     display: flex;
     align-items: center;
     padding: 0.5rem;
@@ -27,12 +27,38 @@ html, body {
     z-index: 99;
 }
 
-#toolbar a {
+
+
+#toolbar i {
     font-size: x-large !important;
+}
+
+#navbarBrand{
+    font-size: x-large !important;
+
 }
 
 .btn-toolbar {
     column-gap: 5px;
+}
+
+#toolbar .btn-nav {
+    height: 2.4rem;   
+    padding: 0px 10px 0px 10px!important;
+}
+
+#toolbar .btn-nav span{
+    vertical-align: text-bottom;
+    margin-left: 10px;
+}
+
+.nav-spacer{
+    width: 1rem;
+}
+
+.btn.rounded-pill{
+    width: 2.4rem;
+    padding: 0px 0px 0px 1px!important;
 }
 
 #CanvasContainer {
@@ -135,7 +161,7 @@ html, body {
     padding: 0px !important;
 }
 
-.dropdown-item {
+#navFeatures .dropdown-item {
     padding-left: 40px !important;
 }
 
